--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Welcome!\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Synchronizing with: https://github.com/reuven/StarWeaver-python-webinar"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
