--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -16,11 +16,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Pig Latin\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
