--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -20,7 +20,26 @@
    "metadata": {},
    "source": [
     "# Pig Latin\n",
-    "\n"
+    "\n",
+    "Rules for translating from English into Pig Latin:\n",
+    "\n",
+    "- If the English word starts with a vowel (a, e, i, o, u), then add `way`\n",
+    "- Otherwise, move the first letter to the end and then add `ay`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "word = input('Enter a word: ').strip()\n",
+    "\n",
+    "if word[0] in 'aeiou':\n",
+    "    print(word + 'way')\n",
+    "else: \n",
+    "    \n",
+    "    "
    ]
   }
  ],
