--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -29,16 +29,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word: papaya\n",
+      "apayapay\n"
+     ]
+    }
+   ],
    "source": [
     "word = input('Enter a word: ').strip()\n",
     "\n",
     "if word[0] in 'aeiou':\n",
     "    print(word + 'way')\n",
     "else: \n",
-    "    \n",
+    "    print(word[1:] + word[0] + 'ay')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pig Latin sentence\n",
+    "\n",
+    "I want to translate an entire sentence (no punctuation, no capitals).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = input('Enter a sentence: ').strip()\n",
+    "\n",
+    "if word[0] in 'aeiou':\n",
+    "    print(word + 'way')\n",
+    "else: \n",
+    "    print(word[1:] + word[0] + 'ay')\n",
     "    "
    ]
   }
