--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -63,16 +63,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a sentence: this is a test\n",
+      "histay isway away esttay "
+     ]
+    }
+   ],
+   "source": [
+    "sentence = input('Enter a sentence: ').strip()\n",
+    "\n",
+    "for word in sentence.split():\n",
+    "    if word[0] in 'aeiou':\n",
+    "        print(word + 'way', end=' ')\n",
+    "    else: \n",
+    "        print(word[1:] + word[0] + 'ay', end= ' ')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pig Latin function\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentence = input('Enter a sentence: ').strip()\n",
+    "def pl_sentence(sentence):\n",
+    "    output = []\n",
     "\n",
-    "if word[0] in 'aeiou':\n",
-    "    print(word + 'way')\n",
-    "else: \n",
-    "    print(word[1:] + word[0] + 'ay')\n",
+    "    for word in sentence.split():\n",
+    "        if word[0] in 'aeiou':\n",
+    "            output.append(word + 'way')\n",
+    "        else: \n",
+    "            print(word[1:] + word[0] + 'ay', end= ' ')\n",
     "    "
    ]
   }
