--- a/StarWeaver - 2021-april-21.ipynb
+++ b/StarWeaver - 2021-april-21.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,9 +107,38 @@
     "        if word[0] in 'aeiou':\n",
     "            output.append(word + 'way')\n",
     "        else: \n",
-    "            print(word[1:] + word[0] + 'ay', end= ' ')\n",
+    "            output.append(word[1:] + word[0] + 'ay')\n",
+    "            \n",
+    "    return ' '.join(output)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'histay isway anotherway interestingway exampleway'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pl_sentence('this is another interesting example')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
